Added openresty and microsoft botchat.

--- a/docker-files/etc/syslog-ng/syslog-ng.conf
+++ b/docker-files/etc/syslog-ng/syslog-ng.conf
@@ -22,6 +22,16 @@ source s_combined {
   unix-stream("/dev/log"
     max-connections(100)
   );
+    unix-dgram("/var/nginx-access-logging.sock"
+    max-connections(100)
+    program-override("nginx-access")
+    default-priority(info)
+  );
+  unix-dgram("/var/nginx-error-logging.sock"
+    max-connections(100)
+    program-override("nginx-error")
+    default-priority(err)
+  );
   internal();
 };
 
