Remove maintenance check for now.

--- a/docker-files/usr/local/openresty/nginx/conf.d/app.conf
+++ b/docker-files/usr/local/openresty/nginx/conf.d/app.conf
@@ -33,7 +33,7 @@ server {
     }
 
     location / {
-        access_by_lua_file /var/www/maint/maintenance.lua;
+        # access_by_lua_file /var/www/maint/maintenance.lua;
 
         if ($redirect_to_https = "true") {
             rewrite ^(.*)$ https://$http_host$1 permanent;
